--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.22.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "@vercel/blob": "^0.22.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
